[workspace]
members = [
    "tools/ygen-mc",
    "tools/simplelang",
    "tools/ytest", 
    "tools/ylc",
    "src/proc", 
]

[workspace.dependencies]
ygen = { path = "." }

[package]
name = "Ygen"
version = "0.1.2"
edition = "2021"
authors = ["Cr0a3"]
homepage = "https://ygen.vercel.app/"
repository = "https://github.com/Toni-Graphics/ygen"
license = "Apache-2.0"
description = "Yet another code generation libary like LLVM"
categories = ["development-tools::ffi"]
keywords = ["compiler", "codegen", "llvm"]

[package.metadata.docs.rs]
rustdoc-args = ["--allow", "warnings"]

[dependencies]
gimli = { version = "0.31.0", features = ["write"] }
logos = "0.14.2"
object = { version = "0.36.4", features = ["write"] }
unescaper = "0.1.5"
ygen_proc = "0.1.0"