[workspace]
members = [
    "tools/ygen-mc",
    "tools/simplelang",
    "tools/ytest", 
    "tools/ylc",
    "src/proc", "tools/ycc", 
]

[workspace.dependencies]
ygen = { path = "." }
proc = { path = "src/proc/."}

[package]
name = "ygen"
version = "0.1.1"
edition = "2021"
authors = ["Cr0a3"]
documentation = "https://toni-graphics.github.io/ygen/Ygen/index.html"
repository = "https://github.com/Toni-Graphics/ygen"
license = "Apache-2.0"
description = "Yet another code generation libary like LLVM"
categories = ["development-tools::ffi"]
keywords = ["compiler", "codegen", "llvm"]

[package.metadata.docs.rs]
rustdoc-args = ["--allow", "warnings"]

[dependencies]
gimli = { version = "0.31.1", features = ["write"] }
logos = "0.15.0"
object = { version = "0.36.7", features = ["write"] }
proc = { workspace = true }
unescaper = "0.1.5"

winapi = { version = "0.3.9", features = ["winnt", "memoryapi", "libloaderapi"], optional = true }
libc = { version = "0.2.172", optional = true }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
wasm-encoder = "0.228.0"

[features]
jit = ["dep:libc", "dep:winapi"]
